--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
