--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "marked": "^4.3.0",
     "ngx-markdown": "^16.0.0",
     "rxjs": "~7.8.0",
